--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -225,7 +225,7 @@
         New employer? Create an account
       </a>
       <a
-        href="/profile"
+        href="/"
         class="block text-sm font-medium text-gray-600 hover:text-gray-500 transition-colors"
       >
         Writer login portal
