--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -120,7 +120,7 @@
             >Password</label
           >
           <a
-            href="/resetpassword"
+            routerLink="/resetpassword"
             class="text-xs font-medium text-yellow-600 hover:text-yellow-500 transition-colors"
           >
             Forgot password?
